# FusionCross

./: .gitignore  PROJECT.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  run_build_test.sh  tailwind.config.js  vite.config.ts
docs/: ISSUES.md  WINE_SANDBOXING.md
packaging/: build_dmg.sh  notarize.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  downloads.rs  main.rs  sandbox.rs  security.rs  state.rs  types.rs  wine.rs
src/components/: ConfirmDialog.tsx  ConfirmModal.tsx  ContextMenu.tsx  EmptyState.tsx  ErrorBoundary.tsx  ModalShell.tsx  Notifications.tsx  Onboarding.tsx  RunCommandModal.tsx  Sidebar.tsx
src/hooks/: useKeyboard.ts
src/pages/: BottleManager.tsx  Dashboard.tsx  DownloadCenter.tsx  InstallWizard.tsx  Library.tsx  PerformanceMonitor.tsx  Settings.tsx  SoftwareCatalog.tsx
src/store/: index.tsx  useApps.ts  useBottles.ts  useRecipes.ts  useRuntimes.ts
src/types/: index.ts
website/: package-lock.json  package.json  server.js
